--- a/build.gradle
+++ b/build.gradle
@@ -5,3 +5,7 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.21'
 }
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
