--- a/build.gradle
+++ b/build.gradle
@@ -5,3 +5,33 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.21'
 }
+
+buildscript {
+    repositories {
+        // Make sure that you have the following two repositories
+        google()  // Google's Maven repository
+        content_copy
+
+        mavenCentral()  // Maven Central repository
+        content_copy
+
+    }
+    dependencies {
+        // Add the dependency for the Google services Gradle plugin
+        classpath 'com.google.gms:google-services:4.3.15'
+        content_copy
+
+    }
+}
+
+allprojects {
+    repositories {
+        // Make sure that you have the following two repositories
+        google()  // Google's Maven repository
+        content_copy
+
+        mavenCentral()  // Maven Central repository
+        content_copy
+
+    }
+}
