--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.4.0' apply false
-    id 'com.android.library' version '7.4.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.21'
-}
 
 buildscript {
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
-        content_copy
-
         mavenCentral()  // Maven Central repository
-        content_copy
-
     }
     dependencies {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
-        content_copy
-
     }
 }
 
-allprojects {
-    repositories {
-        // Make sure that you have the following two repositories
-        google()  // Google's Maven repository
-        content_copy
-
-        mavenCentral()  // Maven Central repository
-        content_copy
-
-    }
+plugins {
+    id 'com.android.application' version '8.0.0' apply false
+    id 'com.android.library' version '8.0.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.21'
 }
+
+//allprojects {
+//    repositories {
+//        // Make sure that you have the following two repositories
+//        google()  // Google's Maven repository
+//        mavenCentral()  // Maven Central repository
+//    }
+//}
